     names the data.table in "i" from the key columns of "x". In cases where the key columns of "x" and "i" are 
     identical, i's columns are referred to by using "i.name". Ex: `x[J(2), i.a]` here refers to i's column "a".

  o  print.data.table gains a new argument (FR #5020) `row.names` with default=TRUE for backwards compatbility. 
     When set to FALSE, the row names (along with the :) doesn't get printed. Thanks to Frank Erickson for the FR.

  o  .SDcols now is also able to de-delect columns. This works on both numerics and column names. For example, 
     DT[, .SD, .SDcols=-c(1,3)] (or) DT[, .SD, .SDcols=-c("x", "z")] now works as expected. However, 
     DT[, .SD, .SDcols=c(1, -3)] or DT[, .SD, .SDcols=c("x", -"z")] would result in error. Thanks to Tonny 
     Peterson for filing this FR #4979.

BUG FIXES

  o  If fread returns a data error (such as unbalanced quotes on a particular line) it now
     closes the file first rather than holding a lock open, a Windows only problem.
     Thanks to nigmastar for reporting and Carl Witthoft for the hint. Tests added.
       http://stackoverflow.com/questions/18597123/fread-data-table-locks-files
       
  o  DT[0,col:=value] is now a helpful error rather than crash, #2754. Thanks to Ricardo Saporta
     for reporting. DT[NA,col:=value]'s error message has also been improved. Tests added.
     
  o  Assigning to the same column twice in the same query is now an error rather than a crash in
     some circumstances; e.g., DT[,c("B","B"):=NULL] (delete by reference the same column twice).
     Thanks to Ricardo (#2751) and matt_k (#2791) for reporting. Tests added.
       http://stackoverflow.com/questions/16638484/remove-multiple-columns-from-data-table
	 
  o  setkey and by= now distinguish numeric NaN, NA, Inf and -Inf correctly (#4684, #4815 and #4883).
     Thanks to Martin Liberts for reporting. Tests added.
     
  o  A test of rbindlist on data.frame input has been added, #4648. Thanks to Minkoo Seo.
  